--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@
 [[headers]]
     for = "/*"
     [headers.values]
-        Access-Control-Allow-Methods: "POST, OPTIONS"
-        Access-Control-Allow-Origin: "*"
-        Access-Control-Allow-Headers: "Authorization, Content-Type, Accept, Origin, X-Requested-With"
-        Access-Control-Max-Age: "2592000"
-        Access-Control-Allow-Credentials: "true"
+        Access-Control-Allow-Methods = "POST, OPTIONS"
+        Access-Control-Allow-Origin = "*"
+        Access-Control-Allow-Headers = "Authorization, Content-Type, Accept, Origin, X-Requested-With"
+        Access-Control-Max-Age = "2592000"
+        Access-Control-Allow-Credentials = "true"
